--- a/webvr.html
+++ b/webvr.html
@@ -21,6 +21,8 @@
 		if (vrDisplay.capabilities.canPresent) {
 			console.log("can present");
 		}
+	} else {
+		console.log("webvr not enabled");
 	}
 </script>
 </html>
