added allowvr to iframe

--- a/webvr-iframe.html
+++ b/webvr-iframe.html
@@ -9,7 +9,7 @@
 
     </head>
 <body>
-		<iframe src="https://webvr.info/samples/03-vr-presentation.html"></iframe>
+		<iframe allowvr="yes" src="https://webvr.info/samples/03-vr-presentation.html"></iframe>
 </body>
 <style>
 	html, body, iframe {
